<resources>
    <string name="app_name">Aplikasiku</string>
    <string name="logo_text">Aplikasiku</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_aplikasiku">Welcome to Aplikasiku</string>
    <string name="sub_welcome">What is going to happen tomorrow?</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_code">Reset Code</string>
    <string name="enter_your_reset_code">Enter your number</string>
    <string name="enter_your_new_password">Enter your password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_request">Send Request</string>
    <string name="change_password">Change Password</string>
</resources>